fixed the dark mode

--- a/styles/base.css
+++ b/styles/base.css
@@ -46,6 +46,7 @@ header img {
 	content: "✖︎";
     color: white;
 }
+
 /* End of Hamburger Menu */
 
 /* Dark Mode */
@@ -56,6 +57,13 @@ header img {
     width: 24px;
     cursor: pointer;
 }
+
+.dark-mode main {
+  background-color: #2b2b2b;
+  color: #bec7bb;
+  box-shadow: #bec7bb;
+}
+
 
 /* End of Dark Mode */
 
@@ -108,6 +116,12 @@ main h1 {
   padding: 50px;
   margin: 20px;
 }
+
+/* how do i make the first card longer???
+.card:nth-child(1) {
+  grid-column: 1 / span 1; /* This will make the first card span two columns
+} */
+
 .card ul {
   list-style-type: none;
 }
@@ -122,7 +136,7 @@ footer {
   padding: 20px;
   text-align: center;
   background: #2f3e46;
-  margin-top: -20px;
+  margin-top: -10px;
   color: #cad2c5;
 }
 
